[package]
name = "chemestro"
description = "An turn-based card game which consist of defeating your homies with chemical reactions!"
version = "0.1.0"
edition = "2024"
authors = ["Nyunu", "Goo"]
license = "GPL 3.0"
repository = "https://github.com/NyunuBit/Chemestro"

[dependencies]
bevy = { version = "0.18.1", features = ["dynamic_linking"] }

# most of these are recomendations by the bevy doc: https://bevy.org/learn/quick-start/getting-started/setup/

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
